fix vertical align

--- a/public/css/fntwork-super-downloads-api-public.css
+++ b/public/css/fntwork-super-downloads-api-public.css
@@ -83,4 +83,5 @@
 	color: white;
 	justify-content: center;
 	align-items: center;
+	height: 100%;
 }
